fix in dark mode zoom image background is white

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1079,3 +1079,8 @@ strong {
 /*.dark .post-entry{*/
 /*    box-shadow: var(--white-shadow-1);*/
 /*}*/
+
+
+.dark .medium-zoom-overlay{
+    background: var(--theme) !important;
+}
